# coursework_1

./: .flake8  .gitignore  README.md  env.sample  pyproject.toml
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_views.py
