[project]
name = "coursework1"
version = "0.1.0"
description = ""
authors = [
    {name = "Yaroslav",email = "kakanop7xiaomi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"
flake8 = "^7.2.0"

[tool.isort]
profile = "black"
line_length = 119

[tool.black]
line-length = 119
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | logs
  | \.log
)/
'''

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

